--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <title>Ping Pong Game</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/styles.css">
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
 
-    <script src="src/index.js"></script>
+      <div id="top" class="paddle">Rod 1</div>
+      <div id="ball"></div>
+      <div id="bottom" class="paddle">Rod 2</div>
+      
+    </div>
+
+    <script src="src/index.js" type="module"></script>
   </body>
 </html>
